src/styles/media-queries/_posts.sass
@media screen and (max-width: 650px) and (orientation: portrait)

    .project-post
    
        header
            padding: 0
            height: 100vh
            display: flex
            align-items: center
            justify-content: center
            text-align: right

        .content > .top
            display: flex
            flex-direction: column
            height: 50%
            width: 100%

            &>span
                display: flex
                justify-content: flex-end

                button
                    margin: 0
                    width: 40px
                    height: 40px
                    padding: 0.5rem

            h1
                font-size: 250%

            h2
                margin-top: 2rem
                font-size: 200%
    
        .content
            height: 80vh
            display: flex
            flex-direction: column
            align-items: flex-start
            max-width: 100%
            width: 90% !important

            p
                text-align: right
                margin: 0
                padding: 0

        .gallery
            width: 90%

            .photos
                width: 100%
                grid-template-columns: 1fr 1fr
                grid-auto-flow: row


        article
            font-size: 100%
            width: 90%

            blockquote 
                border-left: none
                padding: 0
                padding-top: 1rem
                border-top: 2px solid $fg-color-2

                &::before, &::after
                    display: none

            img
                width: 100%

            h1
                font-size: 200%

            h2
                font-size: 150%

            p
                font-size: 100%

            ul > li
                font-size: 75%

            code, pre
                font-size: 10pt
        

